<resources>
    <string name="app_name">OOH Tracker</string>
    <string name="title_edittext_preference">Campaign ID</string>
    <string name="dialog_title_edittext_preference">Enter Campaign ID</string>
    <string name="title_list_preference">Save quality</string>
    <string name="GroupID">GroupID</string>
    <string name="SaveQuality">SaveQuality</string>
    <string name="notesSaved">NotesSaved</string>
    <string name="preview_image">Preview Image</string>
    <string name="channel_default">Primary Channel</string>
    <string name="element_text">element</string>

    <string name="settings_status_off_summary">Service stopped</string>
    <string name="settings_status_on_summary">Service running</string>

    <string-array name="pref_save_quality_entries">
        <item>1280</item>
        <item>1440</item>
        <item>1920</item>
        <item>2500</item>
    </string-array>
    <string-array name="pref_save_quality_values">
        <item>1280</item>
        <item>1440</item>
        <item>1920</item>
        <item>2500</item>
    </string-array>
    <string-array name="autoUploader_values">
        <item>Automatic</item>
        <item>Manual</item>
    </string-array>
    <string-array name="autoUploader_values_entries">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="MapTypePref_values">
        <item>Normal</item>
        <item>Hybrid</item>
    </string-array>
    <string-array name="MapTypePref_values_entries">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="SelectCamera_values">
        <item>Back</item>
        <item>Front</item>
    </string-array>
    <string-array name="SelectCamera_values_entries">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="action_verify_phone">Verify Phone</string>
    <string name="verify_failed">Phone verification failed. Try again.</string>
    <string name="action_verify_TOP">Verify OTP</string>
    <string name="prompt_OTP">Input received OTP</string>
    <string name="action_send_otp">Send OTP</string>
    <string name="key_title_edittext_preference">Key</string>
    <string name="notification_status">Uploading image files.</string>
    <string name="autoUploader">autoUploader</string>
    <string name="uploaderBehavior">Uploader Behavior</string>
    <string name="button_sample_text">Log Out</string>
    <string name="AboutButtonPref">AboutButtonPref</string>
    <string name="MapTypePref">MapTypePref</string>
    <string name="ToggleUploader">ToggleUploader</string>
    <string name="viewEnqueuedFiles">viewEnqueuedFiles</string>
    <string name="SelectCamera">Select Camera</string>
    <string name="credits">\nOwner: Mr. Sanjeev\nDeveloper: Rifat</string>
    <string name="sites">Web: www.oohtracker.com
        \nEmail: Support@oohtracker.com</string>
    <string name="app_version">
        App Name: OOH Tracker
        \nVersion: 0.3.5
    </string>
</resources>